--- a/style.css
+++ b/style.css
@@ -1,4 +1,27 @@
 body {
-    text-align: center;
-    background-color: burlywood;
+    background-color: #7d9da1d2;
  }
+ #survey-form{
+     max-width :500px;
+     margin:2rem auto;
+     border:2px solid #304f53d2;
+     padding:2rem;
+ }
+
+ /* label{
+    display : block;
+}
+ input,textarea{
+    display:block;
+}   */
+div{
+    display:block;
+}
+
+#submit{
+    /* border: ; */
+    background-color: beige ;
+    color: blueviolet;
+    cursor:pointer;
+}
+
