--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@ p{
 }
  body {
     font-family: sans-serif;
-    background-color: #7d9da1d2;
+    background-color: #dbc5a8;
  }
  #survey-form {
      max-width :500px;
-     margin:2rem auto;
-     border:2px solid #304f53d2;
+     margin:1rem auto;
+     border:2px solid #111f20d2;
      padding:2rem;
      border-radius: 5px;
+     background-color: #9b7749;
  }
 
 
@@ -28,14 +29,17 @@ input,textarea{
     padding:.5rem;
     font-size:16px;
     border-radius: 5px;
+    background-color: blanchedalmond;
 }
  #submit {
-    background-color: rgb(16, 96, 99) ;
-    color: blueviolet;
+    background-color: rgb(16, 23, 46) ;
+    color: whitesmoke;
     cursor:pointer;
     display:block;
     padding: .5rem;
     width:auto;
     margin:1rem 0;
 }
-
+select{
+    font-size:16px;
+}
